Minor changes and unit test addition for GameScoresProcessor.